# invoice-ocr

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CI_CD_AUDIT.md  CLAUDE.md  DEPLOYMENT.md  Dockerfile  README.md  RUNBOOK.md  TESTING_REPORT.md  architecture.md  architecture_v3_final.md  docker-compose.yml  human_review.csv  label_minitet_festive_24_v3_public.json  pyproject.toml  pyrightconfig.json  smoke_report.json  task_v3_final.md  verify_checkpoint.jsonl  verify_report.jsonl
.claude/: settings.local.json
.github/workflows/: build-push.yml  ci-cd.yml  ci.yml  deploy-prod.yml  deploy-staging.yml  deploy.yml  fast-checks.yml  full-eval.yml  stack-gate.yml  verify-staging.yml
data/: audit_report_v2.txt  bhx_audit.txt  bhx_debug.txt  deep_char_report.txt  deep_char_report_v2.txt  false_positive_report.txt  final_golden_report.txt  mid_question_check.txt  remaining_hash.txt  sample_test_report.txt  soft_flag_report.txt  soft_flag_samples.txt  verify_report.txt
data/eval/: dev_set.json  split_meta.csv  test_set.json
experiments/: baseline.json  comparison.md
experiments/runs/: run_1_v3.5.json  run_2_v3.6.json  run_3_v3.7.json
grafana/dashboards/: invoice-ocr-v3.json
grafana/provisioning/dashboards/: dashboards.yml
migrations/: alembic.ini  env.py
migrations/versions/: 0001_initial_jobs.py  0002_cdn_url_migration.py
models/yolov11n_receipt/: config.pbtxt
ops/: Makefile  deploy-here.sh  pull-secrets.sh  rollback.sh  snapshot.sh
ops/systemd/: invoice-ocr.service
prometheus/: prometheus.yml
scripts/: audit_ocr_errors.py  check_accuracy.py  ci_load_test.sh  correct_gt_labels.py  debug_pocky.py  deep_char_audit.py  deploy.sh  download_images.py  evaluate.py  extract_whitelist.py  investigate_bhx.py  investigate_false_positives.py  load_test.py  normalize_dataset.py  rebuild_golden.py  run_eval.py  run_experiment.py  sample_soft_flags.py  sample_test_set.py  schema_align.py  smoke_e2e.py  split_eval_set.py  test_burst.py  test_pipeline.py  trace_remaining_hash.py  verify_golden.py  verify_gt_labels.py
scripts/aws/: bootstrap-vps.sh  provision-vps.sh  seed-secrets.sh  upload-models.sh
src/: logging_config.py
src/api/: app.py  backpressure.py  metrics.py  routes.py
src/config/: settings.py
src/domain/: constants.py  errors.py
src/init/: entrypoint.py
src/pipeline/: detector.py  extractor.py  json_schema.py  postprocessor.py  preprocessor.py  triton_client.py  whitelist_index.py
src/pipeline/prompts/: v3.4.txt  v3.5.txt  v3.6.txt  v3.7.txt
src/schemas/: __init__.py  invoice.py
src/storage/: http_client.py  minio_client.py  postgres_client.py  redis_client.py
src/utils/: token_bucket.py
src/worker/: loop.py  main.py  metrics.py  nightly_purge.py  rate_refresh.py  sweeper.py  whitelist_reload.py
tests/integration/: test_backpressure_math.py  test_deterministic_replay.py  test_schema_contract.py
tests/unit/: test_m0_skeleton.py  test_m1_storage_surface.py  test_m2_pipeline_core.py  test_m3_detector.py  test_m4_extractor.py  test_m5_api_surface.py
whitelists/: README.md  product_names_whitelist.json  store_names_whitelist.json
