[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "invoice-ocr"
version = "3.0.0"
description = "Invoice OCR — Triton-batched YOLO + Gemini Flash Lite, async/Redis-RPC pipeline"
requires-python = ">=3.11"
dependencies = [
    # API + ASGI
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "python-multipart>=0.0.9",

    # Storage clients
    "redis>=5.0.0",
    "asyncpg>=0.30.0",
    "psycopg2-binary>=2.9.0",     # alembic sync upgrade in init container
    "sqlalchemy>=2.0.0",          # alembic only — no ORM at runtime
    "alembic>=1.13.0",
    "minio>=7.2.0",

    # Pipeline
    "Pillow>=10.0.0",
    "imagehash>=4.3.0",
    "numpy>=1.26.0",
    "rapidfuzz>=3.9.0",
    "tritonclient[grpc]>=2.45.0",
    "google-genai>=1.0.0",

    # Schemas + settings
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",

    # Observability
    "prometheus-client>=0.20.0",
    "python-json-logger>=2.0.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",          # FastAPI TestClient
    "ruff>=0.5.0",
    "mypy>=1.10.0",
    "pre-commit>=3.7.0",
]

[tool.setuptools.packages.find]
include = ["src*"]

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
